--- a/report/pers_schedule/main.tex
+++ b/report/pers_schedule/main.tex
@@ -28,15 +28,15 @@
 \addbibresource{references.bib}
 
 \tikzstyle{startstop} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black,text width = 5cm, fill=red!30]
-\tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=blue!30]
-\tikzstyle{process} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, text width = 4cm, draw=black, fill=orange!30]
-\tikzstyle{decision} = [diamond, minimum width=2cm, minimum height=1cm,text centered,text width = 2.5cm, draw=black, fill=green!30]
+\tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=2cm, minimum height=1cm, text centered, draw=black, fill=blue!30]
+\tikzstyle{process} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, text width = 3cm, draw=black, fill=orange!30]
+\tikzstyle{decision} = [diamond, minimum width=1cm, minimum height=1cm,text centered,text width = 2.5cm, draw=black, fill=green!30]
 \tikzstyle{arrow} = [thick,->,>=stealth]
 
 \definecolor{ErasmusBlue}{RGB}{12, 32, 116}
 
 %Use 4 levels of sections using package titlesec
-\setcounter{secnumdepth}{4}
+%\setcounter{secnumdepth}{4}
 \newcommand{\subsubsubsection}[1]{\paragraph{#1}\mbox{}\\\\}
 
 \newcommand{\argmax}[1]{\underset{#1}{\operatorname{arg}\,\operatorname{max}}\;}
